--- a/stripeboard/templates/board/dashboard.html
+++ b/stripeboard/templates/board/dashboard.html
@@ -44,7 +44,7 @@
       <br />
       <br />
       <br />
-      <small><em>It isn't very likely that these values are perfect, and we already load a lot of data from the Stripe API (sorry guys) to get it somewhat close. But it should be within the ballpark, and you should want to make them go up all them same. <a href="#">Want to help fix it or run it locally?</a></em></small>
+      <small><em>It isn't very likely that these values are perfect, and we already load a lot of data from the Stripe API (sorry guys) to get it somewhat close. But it should be within the ballpark, and you should want to make them go up all them same. <a href="https://github.com/zapier/stripeboard">Want to help fix it or run it locally?</a></em></small>
     </div>
   </div>
 {% endblock container %}
