--- a/stripeboard/templates/home.html
+++ b/stripeboard/templates/home.html
@@ -4,7 +4,7 @@
   <div class="well">
     <h2>We love Stripe. We love metrics. It's baby making time.</h2>
     <br />
-    <p>If you use Stripe on your SaaS app (and you should), you are just a few clicks away from growth, CLV, and churn rates on your very own dashboard. It's simple, and its <a href="#">open source</a>. This is partially extracted from our own internal dashboard at <a href="https://zapier.com/">Zapier</a>, but with your Stripe data, not ours.</p>
+    <p>If you use Stripe on your SaaS app (and you should), you are just a few clicks away from growth, CLV, and churn rates on your very own dashboard. It's simple, and its <a href="https://github.com/zapier/stripeboard">open source</a>. This is partially extracted from our own internal dashboard at <a href="https://zapier.com/">Zapier</a>, but with your Stripe data, not ours.</p>
     <br />
     <p><a class="btn btn-large btn-primary" href="#">Connect your Stripe account with read-only OAuth</a></p>
   </div>
