oauth start url fix

--- a/stripeboard/templates/home.html
+++ b/stripeboard/templates/home.html
@@ -6,6 +6,6 @@
     <br />
     <p>If you use Stripe on your SaaS app (and you should), you are just a few clicks away from growth, CLV, and churn rates on your very own dashboard. It's simple, and its <a href="https://github.com/zapier/stripeboard">open source</a>. This is partially extracted from our own internal dashboard at <a href="https://zapier.com/">Zapier</a>, but with your Stripe data, not ours.</p>
     <br />
-    <p><a class="btn btn-large btn-primary" href="#">Connect your Stripe account with read-only OAuth</a></p>
+    <p><a class="btn btn-large btn-primary" href="{% url oauth_start %}">Connect your Stripe account with read-only OAuth</a></p>
   </div>
 {% endblock container %}
