--- a/stripeboard/templates/base.html
+++ b/stripeboard/templates/base.html
@@ -19,6 +19,8 @@
   </head>
 
   <body>
+    <a href="https://github.com/zapier/stripeboard"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
