--- a/stripeboard/templates/home.html
+++ b/stripeboard/templates/home.html
@@ -7,5 +7,11 @@
     <p>If you use Stripe on your SaaS app (and you should), you are just a few clicks away from growth, CLV, and churn rates on your very own dashboard. It's simple, and its <a href="https://github.com/zapier/stripeboard">open source</a>. This is partially extracted from our own internal dashboard at <a href="https://zapier.com/">Zapier</a>, but with your Stripe data, not ours.</p>
     <br />
     <p><a class="btn btn-large btn-primary" href="{% url oauth_start %}">Connect your Stripe account with read-only OAuth</a></p>
+
+    <br />
+    <img class="polaroid" src="{{ STATIC_URL }}img/stripeboard.png" alt="sample data screenshot" />
+    <div class="clear"></div>
+    <br />
+    <p><em>sample data screenshot...</em></p>
   </div>
 {% endblock container %}
